Regression: Shrink/Fatten Even with Alt does not work anymore #120744

Closed
opened 2024-04-17 16:33:39 +02:00 by Daniel Gryningstjerna · 3 comments

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-14 14:47, hash: 740d1fbc4b13 and 4.1
Worked: 4.0

Short description of error
Shrink/Fatten Even with Alt toggle does not work anymore, only with S.
image

Exact steps for others to reproduce the error
Add a cube and use shrink/fatten and two faces, notice that the even option toggle only works with S and not Alt anymore.

**Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-14 14:47, hash: `740d1fbc4b13` and 4.1 Worked: 4.0 **Short description of error** Shrink/Fatten Even with Alt toggle does not work anymore, only with S. ![image](/attachments/fc0e8e27-2d70-486b-beac-334b58c5e71e) **Exact steps for others to reproduce the error** Add a cube and use shrink/fatten and two faces, notice that the even option toggle only works with S and not Alt anymore.
2.7 KiB
Daniel Gryningstjerna added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-04-17 16:33:40 +02:00
Daniel Gryningstjerna changed title from Shrink/Fatten Even with Alt does not work anymore to Regression: Shrink/Fatten Even with Alt does not work anymore 2024-04-17 16:34:40 +02:00

I can confirm the issue. It seems to be related to the option "Transform Navigation with Alt".

I can confirm the issue. It seems to be related to the option "Transform Navigation with Alt".
Contributor

Alt should be removed anyway. It already has a shortcut S, why does it need second one, and especially one that is used by something else

Alt should be removed anyway. It already has a shortcut S, why does it need second one, and especially one that is used by something else

For now, as a fix, I'm just going to make them both (navigation, Even) work at the same time.

For now, as a fix, I'm just going to make them both (navigation, Even) work at the same time.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-17 17:27:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120744
No description provided.